# Testgen

./: .gitignore  Notes.txt  README.md  api.py  api_client.py  cli.py  extractor.py  generator.py  pyproject.toml  testgen_doc.md
pytestgen_ai/: api.py  cli.py  coverage_run.py  detector.py  extractor.py  generator.py  writer.py
samples/: auth.py  calculator.py  database.py  hackerrank_tree.py  hr_linkedlist.py  hr_next_greater.py  lc_tree.py  login_sample.py  string_utils.py  test_auth.py  test_database.py  test_hackerrank_tree.py  test_hr_linkedlist.py  test_hr_next_greater.py  test_lc_tree.py  test_sample.py
