[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytestgen-ai"
version = "0.2.0"
description = "Auto-generate pytest tests for Python functions using Groq AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "groq",
    "python-dotenv",
    "pytest",
    "pytest-cov",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[[project.authors]]
name = "SriKaaviya"
email = "srikaaviya.rceg@gmail.com"

[project.scripts]
testgen = "cli:app"
